Fix project card not responsive

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,12 +19,14 @@
 }
 
 .cardContainer {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     margin-top: 24px;
 }
 
 .projectCard {
+    flex: 1 1 40%;
     border: 1px dotted rgba(0, 0, 0, 0.2);
     min-width: 300px;
     min-height: 100px;
